--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,15 @@
 anyio==3.7.0
-asttokens==2.2.1
-backcall==0.2.0
-certifi==2022.12.7
 click==8.1.3
 colorama==0.4.6
-comm==0.1.2
-debugpy==1.6.5
-decorator==5.1.1
-distlib==0.3.6
-dnspython==2.3.0
-email-validator==2.0.0.post2
-entrypoints==0.4
-executing==1.2.0
+exceptiongroup==1.1.1
 fastapi==0.98.0
-filelock==3.9.0
 h11==0.14.0
-httpcore==0.17.2
-httptools==0.5.0
-httpx==0.24.1
 idna==3.4
-ipykernel==6.19.4
-ipython==8.8.0
-itsdangerous==2.1.2
-jedi==0.18.2
-Jinja2==3.1.2
-jupyter_client==7.4.8
-jupyter_core==5.1.2
-MarkupSafe==2.1.3
-matplotlib-inline==0.1.6
-nest-asyncio==1.5.6
-numpy==1.24.2
-orjson==3.9.1
-packaging==22.0
-pandas==1.5.3
-parso==0.8.3
-pickleshare==0.7.5
-pipenv==2023.2.4
-platformdirs==2.6.2
-prompt-toolkit==3.0.36
-psutil==5.9.4
-pure-eval==0.2.2
+numpy==1.25.0
 pydantic==1.10.9
-Pygments==2.14.0
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-multipart==0.0.6
-pytz==2022.7.1
-pywin32==305
-PyYAML==6.0
-pyzmq==24.0.1
-six==1.16.0
 sklearn==0.0.post5
 sniffio==1.3.0
-stack-data==0.6.2
 starlette==0.27.0
-tornado==6.2
-traitlets==5.8.0
 typing_extensions==4.6.3
-ujson==5.8.0
 uvicorn==0.22.0
-virtualenv==20.19.0
-virtualenv-clone==0.5.7
-watchfiles==0.19.0
-wcwidth==0.2.5
-websockets==11.0.3
+
