--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ exceptiongroup==1.1.1
 fastapi==0.98.0
 h11==0.14.0
 idna==3.4
-numpy==1.25.0
+numpy
 pydantic==1.10.9
 sklearn==0.0.post5
 sniffio==1.3.0
