--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ h11==0.14.0
 idna==3.4
 numpy
 pydantic==1.10.9
-sklearn==0.0.post5
+scikit-learn
 sniffio==1.3.0
 starlette==0.27.0
 typing_extensions==4.6.3
